Realice el formulario de contacto de la pagina, me falta agregar el captcha

--- a/formulario.html
+++ b/formulario.html
@@ -52,6 +52,35 @@
   </nav>
 
 
+  <div class="container-fluid consulta">
+    <div class="row">
+      <div class="col-md">
+        <h1 class="secciones">CONSULTAS</h1>
+      </div>
+    </div>
+    <div class="row">
+      <section class="col-md-4">
+        <form>
+          <input class="datos" type="text" placeholder="Apellido">
+          <input class="datos" type="text" placeholder="Nombre">
+          <input class="datos" type="text" placeholder="CUIT/DNI">
+          <input class="datos" type="text" placeholder="Correo electronico">
+        </form>
+      </section>
+      <section class="col-md-4">
+        <textarea class="datos" name="opinion" cols="23" rows="7" placeholder="Escriba aqui su consulta..."></textarea>
+      </section>
+      <section class="col-md-4 validarConsulta">
+        <form>
+          <div class="consulta">
+            <span class="capcha"></span>
+            <input class="valorIngresado" type="number">
+            <button class="btnValidar">VALIDAR</button>
+          </div>
+        </form>
+      </section>
+    </div>
+  </div>
 
 
 
